--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,12 +51,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@android:drawable/editbox_background"
         android:bufferType="normal"
-        android:ems="5"
+        android:ems="3"
         android:inputType="numberDecimal"
         android:textColor="@android:color/black"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/kooli"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -80,7 +82,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@android:drawable/editbox_background"
-        android:ems="5"
+        android:ems="3"
         android:inputType="numberDecimal"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/old_wt"
@@ -102,13 +104,15 @@
         android:id="@+id/old_wt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@android:drawable/editbox_background"
-        android:ems="5"
+        android:ems="3"
         android:inputType="numberDecimal"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/kooli"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
