--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,10 +138,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:visibility="visible"
         app:cardBackgroundColor="#671E19"
         app:cardCornerRadius="16dp"
         app:cardElevation="16dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,7 +150,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#671E19">
+            android:background="#671E19"
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/n1"
@@ -160,21 +161,23 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/new_weight"
                 android:textColor="#FFD700"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/weight_new"
+                android:id="@+id/pay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="0"
                 android:textColor="#FFD700"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/n1"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -185,22 +188,36 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/old_weight"
                 android:textColor="#FFD700"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/n1" />
 
             <TextView
-                android:id="@+id/old_w"
+                android:id="@+id/n3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/tarugu"
+                android:textColor="#FFD700"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/n2" />
+
+            <TextView
+                android:id="@+id/left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="0"
                 android:textColor="#FFD700"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/weight_new" />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/n2"
+                app:layout_constraintTop_toBottomOf="@+id/pay" />
 
             <TextView
                 android:id="@+id/n4"
@@ -210,10 +227,38 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/wages"
                 android:textColor="#FFD700"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/n2" />
+                app:layout_constraintTop_toBottomOf="@+id/n3" />
+
+            <TextView
+                android:id="@+id/reduced"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="0"
+                android:textColor="#FFD700"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/n3"
+                app:layout_constraintTop_toBottomOf="@+id/left" />
+
+            <TextView
+                android:id="@+id/n5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/total"
+                android:textColor="#FFD700"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/n4" />
 
             <TextView
                 android:id="@+id/wage"
@@ -223,24 +268,11 @@
                 android:layout_marginEnd="16dp"
                 android:text="0"
                 android:textColor="#FFD700"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/old_w" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/total"
-                android:textColor="#FFD700"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/n4" />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/n4"
+                app:layout_constraintTop_toBottomOf="@+id/reduced" />
 
             <TextView
                 android:id="@+id/total"
@@ -254,6 +286,8 @@
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/n5"
                 app:layout_constraintTop_toBottomOf="@+id/wage" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
