Option to change Tarugu percentage.

--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -17,4 +17,15 @@
         android:inputType="numberDecimal"
         android:autofillHints="" />
 
+    <EditText
+        android:id="@+id/edit_percent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_margin="16dp"
+        android:padding="16dp"
+        android:hint="@string/enter_percent"
+        android:inputType="number"
+        android:autofillHints=""/>
+
 </LinearLayout>
