--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,9 +37,9 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="@string/new_weight"
+        android:text="@string/weight_new"
         android:textColor="#FFD700"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,19 +49,17 @@
         android:id="@+id/new_wt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:bufferType="normal"
         android:ems="3"
         android:inputType="numberDecimal"
         android:textColor="@android:color/black"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/kooli"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:autofillHints=""
         tools:ignore="LabelFor" />
 
     <TextView
@@ -69,8 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/old_weight"
+        android:layout_marginEnd="24dp"
+        android:text="@string/weight_old"
         android:textColor="#FFD700"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,9 +78,10 @@
         android:id="@+id/kooli"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
+        android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:ems="3"
         android:inputType="numberDecimal"
@@ -91,14 +90,15 @@
         app:layout_constraintEnd_toStartOf="@+id/old_wt"
         app:layout_constraintStart_toEndOf="@+id/new_wt"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        android:autofillHints=""
         tools:ignore="LabelFor" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/wages"
         android:textColor="#FFD700"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
@@ -109,18 +109,16 @@
         android:id="@+id/old_wt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
+        android:autofillHints=""
         android:background="@android:drawable/editbox_background"
         android:ems="3"
         android:inputType="numberDecimal"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/kooli"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        android:autofillHints=""
         tools:ignore="LabelFor" />
 
     <Button
@@ -164,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="@string/new_weight"
+                android:text="@string/to_pay"
                 android:textColor="#FFD700"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -188,7 +186,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="@string/old_weight"
+                android:text="@string/left_over"
                 android:textColor="#FFD700"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
